fixed + button alignment

--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,12 @@ body {
   align-items: center;
   justify-content: center;
 }
+
+
+
+.footer {
+  height: 100px;
+  position: absolute;
+  text-align: center;
+  bottom: 0;
+}
